--- a/src/TUILiveKit/assets/global.scss
+++ b/src/TUILiveKit/assets/global.scss
@@ -42,7 +42,7 @@ a:active {
   height: 2.5rem;
   line-height: 2.5rem;
   padding: 0 1rem;
-  border-bottom: 1px solid $color-split-line;
+  border-bottom: 1px solid $color-divider-line;
   font-weight: 500;
 }
 
