--- a/src/TUILiveKit/assets/variable.scss
+++ b/src/TUILiveKit/assets/variable.scss
@@ -7,12 +7,17 @@ $color-danger: #FF4949;
 $color-background-primary: #0F1014;
 $color-background-secondary: #22262E;
 
-$color-split-line: #383F4D;
-
+$color-icon-music-list:#1C66E5;
 $color-font-default: white;
 $color-font-primary: $color-primary;
+$color-font-gray:#8F9AB2;
+$color-play-button:#1C66E5;
+$color-delete-button:#E5395C;
+$color-divider-line:#383F4D;
+$color-background-active:#000000;
+$color-audio-effect-active:#1C66E5;
+$color-audio-effect-default:#4E5461;
 
-// --------------------------------- 已下样式从老项目复制，可能用不到，要删除
 $color-gray-1: #FFFFFF;
 $color-gray-2: #FAFAFA;
 $color-gray-3: #F5F5F5;
