--- a/src/TUILiveKit/assets/global.scss
+++ b/src/TUILiveKit/assets/global.scss
@@ -39,11 +39,21 @@ a:active {
 }
 
 .tui-title {
+  position: relative;
   height: 2.5rem;
   line-height: 2.5rem;
   padding: 0 1rem;
-  border-bottom: 1px solid $color-divider-line;
   font-weight: 500;
+}
+
+.tui-title::after{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 1rem;
+  right: 1rem;
+  height: 0.0625rem;
+  background-color: var(--stroke-color-primary);
 }
 
 .tui-window-header {
@@ -52,8 +62,10 @@ a:active {
   -webkit-app-region: drag;
   height: 2.75rem;
   line-height: 2.75rem;
-  font-size: 0.75rem;
-
+  font-size: 0.875rem;
+  background-color: var(--bg-color-dialog);
+  color: var(--text-color-primary);
+  border-bottom: 1px solid var(--stroke-color-module);
   button {
     -webkit-app-region: no-drag;
     border: none;
@@ -66,4 +78,41 @@ a:active {
     cursor: pointer;
     color: $color-white;
   }
+}
+
+
+.tui-button-confirm{
+  background: var(--button-color-primary-default);
+  color: var(--text-color-button);
+  font-size: $font-style-scss-button-confirm-size;
+  font-style: $font-style-scss-button-confirm-style;
+  font-weight: $font-style-scss-button-confirm-weight;
+  margin-right: 1.25rem;
+}
+
+.tui-button-cancel{
+  background: var(--bg-color-transparency);
+  color: var(--text-color-link);    
+  font-size: $font-style-scss-button-cancel-size;
+  font-style: $font-style-scss-button-cancel-style;
+  font-weight: $font-style-scss-button-cancel-weight;
+  border: 1px solid $color-style-scss-button-cancel-border;
+}
+
+.tui-button-confirm, .tui-button-cancel{
+  border-radius: 2.8125rem;
+  cursor: pointer;
+  padding: 0.25rem 1.75rem;
+  line-height: 1.375rem;
+
+  &:disabled {
+    background-color: var(--button-color-primary-disabled);
+    color: var(--text-color-button);
+    opacity: 1;
+    cursor: not-allowed;
+  }
+}
+
+.tui-secondary-icon{
+  color: var(--text-color-secondary);
 }
