--- a/src/TUILiveKit/common/base/resizable.css
+++ b/src/TUILiveKit/common/base/resizable.css
@@ -4,8 +4,8 @@
 
 .resize-anchor {
   position: absolute;
-  width: 8px;
-  height: 8px;
+  width: 0.5rem;
+  height: 0.5rem;
   border: 1px solid transparent;
   background-color: transparent;
 }
