--- a/src/TUILiveKit/assets/global.scss
+++ b/src/TUILiveKit/assets/global.scss
@@ -2,16 +2,18 @@
 
 * {
   box-sizing: border-box;
+}
 
-  &::-webkit-scrollbar {
-    width: 0.125rem;
-    height: 0.125rem;
-    background-color: var(--color-background-scrollbar);
-  }
+::-webkit-scrollbar {
+  width: 0.1875rem;
+  height: 0.1875rem;
+  background-color: var(--color-background-scrollbar);
+}
 
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--color-background-scrollbar-thumb);
-  }
+::-webkit-scrollbar-thumb {
+  width: 0.1875rem;
+  height: 0.1875rem;
+  background-color: var(--color-background-scrollbar-thumb);
 }
 
 html,
@@ -66,17 +68,17 @@ button {
   -webkit-app-region: drag;
   height: 2.75rem;
   line-height: 2.75rem;
-  font-size: 0.875rem;
+  font-size: 1rem;
+  font-weight: bold;
   background-color: var(--bg-color-dialog);
   color: var(--text-color-primary);
-  border-bottom: 1px solid var(--stroke-color-module);
   button {
     -webkit-app-region: no-drag;
     border: none;
     background-color: transparent;
   }
 
-  .tui-icon {
+  .tui-live-icon {
     display: flex;
     font-size: 1rem;
     cursor: pointer;
@@ -121,4 +123,10 @@ button {
 
 .tui-secondary-icon{
   color: var(--text-color-secondary);
+}
+
+/* override base component */
+.tui-message {
+  top: 2.5rem !important;
+  background-color: #666666;
 }
