--- a/src/TUILiveKit/assets/theme.css
+++ b/src/TUILiveKit/assets/theme.css
@@ -14,6 +14,7 @@
   --text-color-warning: #E37F32;
   --text-color-success: #3BA673;
   --text-color-error: #E6594C;
+  --text-color-placeholder: #6b7280;
 
   --font-size-primary: 1rem;
   --font-size-secondary: 0.75rem;
@@ -23,6 +24,8 @@
   --bg-color-operate: #1F2024;
   --bg-color-dialog: #1F2024;
   --bg-color-dialog-module: #2B2C30;
+  --bg-color-dialog-secondary: #303030;
+  --bg-color-dialog-secondary-mask: rgba(0, 0, 0, 0.55);
   --bg-color-entrycard: #2B2C30;
   --bg-color-function: #3A3C42;
   --bg-color-bottombar: #2B2C30;
@@ -125,6 +128,7 @@
   --text-color-warning: #FF7200;
   --text-color-success: #0ABF77;
   --text-color-error: #E54545;
+  --text-color-placeholder: #d1d5db;
 
   --font-size-primary: 1rem;
   --font-size-secondary: 0.75rem;
@@ -134,6 +138,8 @@
   --bg-color-operate: #FFFFFF;
   --bg-color-dialog: #FFFFFF;
   --bg-color-dialog-module: #F0F2F7;
+  --bg-color-dialog-secondary: #C0C0C0;
+  --bg-color-dialog-secondary-mask: rgba(255, 255, 255, 0.55);
   --bg-color-entrycard: #F0F2F7;
   --bg-color-function: #F0F2F7;
   --bg-color-bottombar: #FFFFFF;
